@@ -1,3 +1,7 @@
+MJ 30/03/05
+- For DegreeStats and BallExpansion: randomized the node selection when
+  the sample is only a subset of the network.
+
 MJ 26/03/05
 - Added boolean support to configuration (only constants so far).
   Similar in function to "contains", take care. In the future we might add
